# portfolio-backend-fastapi

./: Dockerfile  entrypoint.sh  pyproject.toml  run_migrations.sh
portfolio_backend_fastapi/: main.py
portfolio_backend_fastapi/alembic/: env.py
portfolio_backend_fastapi/alembic/versions/: 26536683f29b_add_project_url_to_projects_table.py  295d9734adf3_add_image_id_column_to_projects_table.py  3d61c86afc16_create_images_table.py  5e66d1a399d5_drop_images_reference_constraint.py  637d80c0f530_remove_title_column_from_images_table.py  6c6ab7282717_create_users_table.py  6da35789cc2e_create_skills_table.py  8ed6b60478ab_add_is_top_column_to_skills_table.py  a75e6b05d2ae_create_messages_table.py  b815d0fbdf64_remove_unique_constraint_from_name_and_.py  be1b9ef7738f_create_projects_table.py  cb0c0a644fca_create_skill_categories_table.py  df67ea93c13e_add_frontend_github_url_and_backend_.py
portfolio_backend_fastapi/api/: __init__.py  auth.py  images.py  messages.py  projects.py  skill_categories.py  skills.py
portfolio_backend_fastapi/api/admin/: __init__.py  images.py  messages.py  projects.py  skill_categories.py  skills.py
portfolio_backend_fastapi/config/: __init__.py  database.py
portfolio_backend_fastapi/dependencies/: auth.py  db.py
portfolio_backend_fastapi/helpers/: captcha.py  crud.py
portfolio_backend_fastapi/lib/: password.py
portfolio_backend_fastapi/models/: __init__.py  model_base.py  model_image.py  model_message.py  model_project.py  model_skill.py  model_skill_category.py  model_user.py
portfolio_backend_fastapi/pydantic/: __init__.py
(+16 files in other folders)
